# Develop-LVGLProject

./: .gitignore  CMakeLists.txt
src/: main.c
src/GUI_APP/: all_gui.c  all_gui.h  page_main.c  page_main.h
src/GUI_APP/GUI_Manage/: mem_manage.c  mem_manage.h
src/GUI_APP/GUI_Page/: page.h  page1.c  page3.c  page3_1.c
